--- a/src/GanttComponents/Pages/TimelineHeaderDemo.razor
+++ b/src/GanttComponents/Pages/TimelineHeaderDemo.razor
@@ -157,7 +157,7 @@
 
 @code {
     // Timeline Properties
-    private TimelineZoomLevel CurrentZoomLevel = TimelineZoomLevel.MonthWeek;
+    private TimelineZoomLevel CurrentZoomLevel = TimelineZoomLevel.QuarterMonth24px;
     private double CurrentZoomFactor = 1.0;
     private DateTime TimelineStartDate = DateTime.Today.AddDays(-30);
     private DateTime TimelineEndDate = DateTime.Today.AddDays(60);
