--- a/src/GanttComponents/Pages/GanttComposerDemo.razor
+++ b/src/GanttComponents/Pages/GanttComposerDemo.razor
@@ -129,7 +129,7 @@ else
     private bool ShowDebugAlignment { get; set; } = false;
     
     // Timeline Zoom Control properties
-    private TimelineZoomLevel CurrentZoomLevel { get; set; } = TimelineZoomLevel.WeekDay;
+    private TimelineZoomLevel CurrentZoomLevel { get; set; } = TimelineZoomLevel.WeekDay68px;
     private double CurrentZoomFactor { get; set; } = 1.0;
 
     protected override async Task OnInitializedAsync()
