--- a/src/GanttComponents/Pages/GanttComposerZoomValidation.razor
+++ b/src/GanttComponents/Pages/GanttComposerZoomValidation.razor
@@ -320,7 +320,7 @@ else
 
 @code {
     private List<GanttTask> Tasks { get; set; } = new();
-    private TimelineZoomLevel CurrentZoomLevel { get; set; } = TimelineZoomLevel.WeekDay;
+    private TimelineZoomLevel CurrentZoomLevel { get; set; } = TimelineZoomLevel.WeekDay68px;
     private double CurrentZoomFactor { get; set; } = 1.0;
     private bool ShowDebugAlignment { get; set; } = false;
     private int? SelectedTaskId { get; set; }
@@ -533,7 +533,7 @@ else
             
             // Test zoom change performance
             var zoomStart = DateTime.UtcNow;
-            CurrentZoomLevel = TimelineZoomLevel.MonthWeek;
+            CurrentZoomLevel = TimelineZoomLevel.QuarterMonth24px;
             StateHasChanged();
             await Task.Delay(100);
             var zoomTime = (int)(DateTime.UtcNow - zoomStart).TotalMilliseconds;
@@ -585,10 +585,10 @@ else
             
             // Test that zoom controls affect GanttComposer
             var originalLevel = CurrentZoomLevel;
-            HandleZoomLevelChanged(TimelineZoomLevel.YearQuarter);
+            HandleZoomLevelChanged(TimelineZoomLevel.YearQuarter6px);
             await Task.Delay(100);
             
-            if (CurrentZoomLevel != TimelineZoomLevel.YearQuarter)
+            if (CurrentZoomLevel != TimelineZoomLevel.YearQuarter6px)
             {
                 integrationWorking = false;
             }
